--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -24,6 +24,7 @@ jobs:
           tag: ${{ github.ref_name }}
         run: |
           gh release create "$tag" \
-            --repo="$GITHUB_REPOSITORY" \
-            --title="Version ${tag#v}" \
+            --repo "$GITHUB_REPOSITORY" \
+            --title "Version ${tag#v}" \
+            --notes-file "../release.md" \
             "${GITHUB_WORKSPACE}/primer.css"
