Fix relative file path for release call

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -26,5 +26,5 @@ jobs:
           gh release create "$tag" \
             --repo "$GITHUB_REPOSITORY" \
             --title "Version ${tag#v}" \
-            --notes-file "../release.md" \
+            --notes-file "${GITHUB_WORKSPACE}/.github/release.md" \
             "${GITHUB_WORKSPACE}/primer.css"
