--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Test
 
 on:
   workflow_dispatch:
@@ -9,7 +9,9 @@ on:
       - "v?[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: clairelizbet/action-build@v1
+      - uses: clairelizbet/action-test@v1
+        with:
+          restore-build: false
