--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/clairelizbet/primer/issues"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.2"
   }
 }
