--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -24,6 +24,7 @@ jobs:
           tag: ${{ github.ref_name }}
         run: |
           gh release create "$tag" \
+            --draft \
             --repo "$GITHUB_REPOSITORY" \
             --title "Version ${tag#v}" \
             --notes-file "${GITHUB_WORKSPACE}/.github/release.md" \
