--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,4 +1,4 @@
-name: Test and publish release
+name: Build and publish release
 
 on:
   push:
@@ -9,11 +9,8 @@ jobs:
   test-and-release:
     runs-on: ubuntu-latest
     steps:
-      - uses: clairelizbet/action-npm-install@v1
-
+      - uses: clairelizbet/action-build@v1
       - uses: clairelizbet/action-test@v1
-        with:
-          restore-build: false
 
       - uses: clairelizbet/action-release@v1
         with:
