--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Build and test
 
 on:
   workflow_dispatch:
@@ -12,6 +12,5 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: clairelizbet/action-build@v1
       - uses: clairelizbet/action-test@v1
-        with:
-          restore-build: false
