Adjust workflow names to reflect new behavior

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -6,7 +6,7 @@ on:
       - "v?[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
-  test-and-release:
+  build-and-release:
     runs-on: ubuntu-latest
     steps:
       - uses: clairelizbet/action-build@v1
