--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "primer.css"
   ],
   "scripts": {
-    "build": "playwright install --with-deps && npm run lint && npm link @clairelizbet/primer",
+    "build": "playwright install --with-deps && npm run lint && npm link",
     "lint": "stylelint primer.css",
     "test": "npm run test:pkg && npm run test:e2e",
     "dev": "cd test/pkg && npm link @clairelizbet/primer && npm start",
